added copy button for copy the color code

--- a/colorFlipper.html
+++ b/colorFlipper.html
@@ -15,10 +15,9 @@
     </nav>
     <div>
         <h2>Generate Random Color </h2>
-        <h4>The color code: <span></span></h4>
-        <button>
-            !!CLICK HERE!!
-        </button>
+        <h4>The color code: <span id="text-to-copy"></span></h4>
+        <button class="refresh" id="refresh">!!CLICK HERE!!</button>
+        <button id="copy">Copy the code </button>
     </div>
 </body>
 </html>
