React added to the project

--- a/colorFlipper.html
+++ b/colorFlipper.html
@@ -19,6 +19,9 @@
         <button>
             !!CLICK HERE!!
         </button>
+        <h4 id="text-div">The color code: <span id="text-to-copy"></span></h4>
+        <button class="refresh" id="refresh">!!CLICK HERE!!</button>
+        <button id="copy">Copy the code </button>
     </div>
 </body>
 </html>
