--- a/colorFlipper.html
+++ b/colorFlipper.html
@@ -7,21 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
-    <script src="/script.js" defer></script>
+    <!-- <script src="/script.js" defer></script> -->
 </head>
 <body>
     <nav>
         <h1>Color Flipper</h1>
     </nav>
-    <div>
-        <h2>Generate Random Color </h2>
-        <h4>The color code: <span></span></h4>
-        <button>
-            !!CLICK HERE!!
-        </button>
-        <h4 id="text-div">The color code: <span id="text-to-copy"></span></h4>
-        <button class="refresh" id="refresh">!!CLICK HERE!!</button>
-        <button id="copy">Copy the code </button>
-    </div>
+    <div id="root">React Not rendered</div>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
